style : change article cover

--- a/source/_posts/20200412.md
+++ b/source/_posts/20200412.md
@@ -5,6 +5,7 @@ tags:
 - javascript
 categories:
 - [JS新手村]
+cover: https://imgur.com/cDhxgqu.png
 ---
 
 此篇是從0開始的JS新手，以閱讀[MDN](https://developer.mozilla.org/en-US/docs/Web/JavaScript)上的javascript開始
