--- a/source/_posts/20200522.md
+++ b/source/_posts/20200522.md
@@ -1,10 +1,11 @@
 ---
-title: Javascript - 解構賦值
+title: Destructuring assignment 解構賦值
 date: 2020-05-22 15:31:52
 tags:
 - javascript
 categories:
 - [JS新手村]
+cover: https://imgur.com/cDhxgqu.png
 ---
 
 解構賦值 (Destructuring assignment)
@@ -245,16 +246,35 @@ function main(array1, array2) {
 module.exports = { main };
 ```
 ==解釋==
+
 js09_module中第12行
 ```
-sumValue({arr1, arr2}) //為sumValue({array1: array1, array2: array2})的簡寫
+sumValue({arr1,arr2}) //為sumValue({array1:array1, array2:array2:})的簡寫
 ```
-sumValue的parameter為物件，想像
+將`function sumValue(inputArray)`帶入參數`{array1, array2}`
+
+在第3行中
 ```
-inputArray = {array1: array1, array2: array2}
+const length = inputArray.arr1.length;
 ```
-因此在第3行中
-`const length = inputArray.arr1.length;`，會以物件`.`的方式取`arr1`
+相當於以下語法：
+```
+const length = {array1: array1= [2, 3, 1, 7, 9], array2: array2= [8, 7, 9, 3, 1]}.array1.length;
+```
+下面的語法就以此類推啦～
+
+
+換一個比較短的例子會比較好理解
+
+```
+const a = [1, 2, 3];
+const b = [4, 5, 6];
+const c = {a, b};
+console.log(c); //{[1, 2, 3], [4, 5, 6]}
+console.log(c.a); // [1, 2, 3]
+console.log(c.a.length); //3
+```
+
 
 
 參考
