--- a/source/_posts/20200525/20200525.md
+++ b/source/_posts/20200525/20200525.md
@@ -191,7 +191,7 @@ addMessage(second, "Event: click");
 
 模擬情境
 1. 當頁面建置完成使用者開始移動滑鼠即點擊滑鼠
-2. 瀏覽器一順序加入將mousemove和click事件放置到事件佇列上
+2. 瀏覽器依順序加入將mousemove和click事件放置到事件佇列上
 3. 事件處理階段：佇列頂端有一個mousemove事件，並執行相關事件處理器，此時click事件等待中
 4. mousemove最後一行執行完畢，並且JS引擎退出該事件函式，mousemove事件處理完成
 5. 事件迴圈再次檢查佇列，找到click事件並執行
