feat : new post 物件的特性存取方式

--- a/source/_posts/20200522.md
+++ b/source/_posts/20200522.md
@@ -182,7 +182,7 @@ return `${displayName} is ${name}`
 console.log(userId(userDD)) //42
 console.log(whois(userDD)) //DD is Hung
 ```
-從物件中提出的`id`, `displayNmae` 和`firstName` 並印出
+從物件中提出的`id`, `displayName` 和`firstName` 並印出
 
 ==設定函式parameter為物件，且有預設值==
 
@@ -220,7 +220,7 @@ for(const {name: n , family: {father: f}} of people){
 
 
 ==題目==
-宣告兩個具有5個元素的整數陣列 `arr1` 和 `arr2` ，並利用陣列設定初值的方式，將 `arr1[0]~arr1[4]` 分別設值為 2,3,1,7,9， `arr2[0]~arr2[4]` 分別設值為 8,7,9,3,1，將 arr1 與 arr2 兩陣列對應項相加，列印出相加後的陣列
+宣告兩個具有5個元素的整數陣列 `arr1` 和 `arr2` ，並利用陣列設定初值的方式，將 `arr1[0] ~ arr1[4]` 分別設值為 2, 3, 1, 7, 9， `arr2[0] ~ arr2[4]` 分別設值為 8, 7, 9, 3, 1，將 arr1 與 arr2 兩陣列對應項相加，列印出相加後的陣列
 ```javascript= 
 //js09.js 介面
 const { main } = require("./js09_module");
