fix : edit article

--- a/source/_posts/20200606.md
+++ b/source/_posts/20200606.md
@@ -43,6 +43,15 @@ obj['123']  //ok
 * 使用點記號法時，屬性名稱（索引名稱）會被視為識別字，因此不能使用不合法的命名。
 * 用方括號記號法，則視為使用字串設定屬性名稱
 
+## 中文也會通
+
+```javascript=
+var obj = { 中文: '你好'};
+console.log(obj.中文) //'你好'
+console.log(obj['中文']) // '你好'
+console.log(obj[中文])  //Uncaught ReferenceError: 中文 is not defined
+```
+
 ## 踩過的點
 ```javascript=
 //將出現的水果和次數用物件顯示
